[project]
name = "mcp-fastapi-chart"
version = "0.1.0"
description = "MCP server for interacting with FastAPI chart generation service"
authors = [
    {name = "Developer", email = "developer@example.com"},
]
dependencies = [
    "mcp[cli]",
    "httpx",
    "pydantic",
]
requires-python = ">=3.9"

[project.scripts]
mcp-fastapi-chart = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.fastmcp]
entrypoint = "main:mcp"

[tool.hatch.build.targets.wheel]
include = [
  "main.py"
]
