[project]
name = "mcp-fastapi-chart"
version = "0.1.0"
description = "MCP server for interacting with FastAPI chart generation service"
authors = [
    {name = "Developer", email = "developer@example.com"},
]
dependencies = [
    "fastmcp",
    "httpx",
    "pydantic",
    "python-dotenv"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_fastapi_chart"]
